# dbx-genie-rx

./: .databricksignore  .env.example  .gitignore  CLAUDE.md  README.md  SECURITY_REVIEW.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt  test_agent.py
agent_server/: agent.py  api.py  auth.py  checklist_parser.py  checks.py  genie_creator.py  ingest.py  llm_utils.py  models.py  optimizer.py  prompts.py  sql_executor.py  start_server.py  style_detector.py  synthesizer.py
app/: app.py  app.yaml  requirements.txt
docs/: best-practices-by-schema.md  checklist-by-schema.md  example_api_call.py  example_serialized_space.json  genie-space-best-practices.md  genie-space-optimizer-plan.md  genie-space-schema.md  local_development_guide.md
frontend/: .gitignore  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisPhase.tsx  AssessmentBadge.tsx  BenchmarksPage.tsx  ChecklistPage.tsx  ChecklistProgress.tsx  DataTable.tsx  FeedbackPage.tsx  IngestPhase.tsx  InputPhase.tsx  LabelingPage.tsx  OptimizationPage.tsx  PreviewPage.tsx  ScoreGauge.tsx  SettingsPage.tsx  SidebarNav.tsx  SqlCodeBlock.tsx  SqlDiffView.tsx  SuggestionCard.tsx  SummaryPhase.tsx  ThemeToggle.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  (+6 more)
frontend/src/hooks/: useAnalysis.ts
frontend/src/lib/: api.ts  benchmarkUtils.ts  diffViewerStyles.ts
frontend/src/types/: index.ts
notebooks/: grant_app_permissions.py
output/: analysis_01f0627099691651968d0a92a26b06e9.json
scripts/: build.sh  deploy.sh  quickstart.sh
src/: ingest.py
